--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'radiant-spire-58483' #Must be unique in Heroku
           heroku_email: 'mirthis@gmail.com'
+          healthcheck: 'https://radiant-spire-58483.herokuapp.com/version'
+          checkstring: '1'
