--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,5 +36,13 @@ jobs:
           heroku_app_name: 'radiant-spire-58483' #Must be unique in Heroku
           heroku_email: 'mirthis@gmail.com'
           healthcheck: 'https://radiant-spire-58483.herokuapp.com/version'
-          checkstring: '1'
           rollbackonhealthcheckfailed: true
+  tag_release:
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
+    - if: ${{ github.event_name == 'push' }}name: Bump version and push tag
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMP: patch
