--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,13 +23,13 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
-          start: npm run start-prod
-          wait-on: http://localhost:5000
-      - name: deploy to Heroku
+        # - name: e2e tests
+        #   uses: cypress-io/github-action@v2
+        #   with:
+        #     command: npm run test:e2e
+        #     start: npm run start-prod
+        #     wait-on: http://localhost:5000
+        # - name: deploy to Heroku
         if: ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
@@ -53,7 +53,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
-jobs:
   a_test_job:
     runs-on: ubuntu-20.04
     steps:
