--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,16 +39,15 @@ jobs:
           healthcheck: 'https://radiant-spire-58483.herokuapp.com/version'
           rollbackonhealthcheckfailed: true
   tag_release:
+    if: ${{ github.event_name == 'push' }} && ${{ !contains(github.event.head_commit.message, '#skip') }}
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
       - name: checkout repository
-        if: ${{ github.event_name == 'push' }}
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
