--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,7 +39,7 @@ jobs:
           healthcheck: 'https://radiant-spire-58483.herokuapp.com/version'
           rollbackonhealthcheckfailed: true
   tag_release:
-    if: ${{ github.event_name == 'push' }} && ${{ !contains(join(github.event.commits.*.message), '#skip') }}
+    if: ${{ github.event_name == 'push' }} && !contains(github.event.head_commit.message, 'wip')
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
@@ -66,7 +66,7 @@ jobs:
         run: echo "$COMMITS"
       - name: commit messages
         env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+          COMMIT_MESSAGES: ${{ concat(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
       - name: head commit
         env:
