--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,7 +54,7 @@ jobs:
           DEFAULT_BUMP: patch
   notify_status:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message), '#skip') }}
-    needs: [tag_releasee]
+    needs: [tag_release]
     runs-on: ubuntu-20.04
     steps:
       - name: Deployment succesfull
