--- a/.github/workflows/healthcechk.yml
+++ b/.github/workflows/healthcechk.yml
@@ -1,7 +1,7 @@
 name: Regular health check
 on:
   schedule:
-    - cron: '30 * * * *'
+    - cron: '* 17 * * *'
 jobs:
   backend_ping:
     runs-on: ubuntu-20.04
